# Socratic-security

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test-and-build.yml  tests.yml
src/socratic_security/: __init__.py
src/socratic_security/audit/: __init__.py  logger.py
src/socratic_security/auth/: __init__.py  breach_checker.py  lockout.py  mfa.py
src/socratic_security/database/: encryption.py
src/socratic_security/filesystem/: __init__.py  path_validator.py
src/socratic_security/input_validation/: __init__.py  validators.py
src/socratic_security/prompt_injection/: __init__.py  config.py  detector.py  sanitizer.py
src/socratic_security/sandbox/: __init__.py  analyzer.py  executor.py  policies.py
tests/unit/: test_auth.py
